<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.danielordonez.coffesociallife.Evolution"
    tools:showIn="@layout/activity_evolution">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Evolución de la cafetera"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/horizontalScrollView"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="250dp"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Siglo XVII"
                    android:id="@+id/textView8"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/imageView2"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ct17"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/coffepotct17"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="250dp"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Siglo XVIII"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ct18"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/coffepotct18"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="250dp"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Siglo XIX"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ct19"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/coffepotct19"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="250dp"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Siglo XX"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ct20"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/coffepotct20"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="250dp"
                android:gravity="center_horizontal"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Siglo XXI"
                    android:layout_marginBottom="20dp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ct21"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/coffepotct21"/>
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>
